# multicoretests

lib/: STM.ml
src/: dune
src/lazy/: dune
src/lockfree/: dune  mpsc_queue_test.ml  spsc_queue_test.ml
